# HoriEngine

./: CMakeLists.txt  setup.bat
HoriEngine/: CMakeLists.txt
HoriEngine/Core/: ActionSystem.cpp  ActionSystem.h  Collider.h  Components.h  Controller.h  DebugRendererComponent.h  DebugRendererSystem.cpp  DebugRendererSystem.h  DebugUIComponents.h  DebugUISystem.cpp  DebugUISystem.h  Ecs.h  EventManager.h  Events.h  FPSComponent.h  FPSSystem.cpp  FPSSystem.h  HoriEngine.cpp  HoriEngine.h  ImGuiThemes.h  InputComponent.h  OpenGLBuffer.h  PhysicsSystem.cpp  PhysicsSystem.h  PrimitivesGeneration.h  QuadTreeComponent.h  Rect.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderComponent.cpp  ShaderComponent.h  Sprite.cpp  Sprite.h  SpriteComponent.cpp  SpriteComponent.h  SpriteRenderer.cpp  (+13 more)
HoriEngine/shaders/: wireframe.fs  wireframe.vs
Test/: CMakeLists.txt
Test/resources/sprites/: TestSprite.aseprite
Test/shaders/: sprite.fs  sprite.vs
Test/src/: TestSprite.cpp
